--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,2 +1,12 @@
 @import url('bulma/css/bulma.css');
-@import url('@fortawesome/fontawesome-free/css/fontawesome.css');
+/*@import url('@fortawesome/fontawesome-free/css/fontawesome.css'); 
+for some reason this ^^^^ is not working*/
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
