--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,12 +1,83 @@
-@import url('bulma/css/bulma.css');
+@import url("bulma/css/bulma.css");
 /*@import url('@fortawesome/fontawesome-free/css/fontawesome.css'); 
 for some reason this ^^^^ is not working*/
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css);
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+* {
+  font-family: "Montserrat", sans-serif;
+}
+body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+.button:hover {
+  border: 1px solid #000000;
+  border-radius: 5px;
+  padding: 0px;
+  margin: 0px;
+}
+.button {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  padding: 0px;
+  margin: 0px;
+}
+header {
+  background-color: #7e7e7e;
+}
+.container{
+  margin-top: 10px;
+}
+.panel-heading {
+  background-color: #CCCCCC;
+}
+.box, .panel {
+  height: 94vh;
+  background-color: #f5f5f5;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+}
+.hero {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.wrapper {
+  overflow-x: auto;
+  width: 100%;
+  min-height: 50vh;
+  max-height: 80vh;
+}
+
+.workouts {
+  margin: 0px;
+  padding: 2px;
+  width: 96%;
+}
+
+.button.is-green {
+  background-color: #00ff00;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
+
+.workout-image {
+  margin: 10px;
+}
+
+.panel-tabs a {
+  color: #000000;
+}
+
+.panel-tabs a:hover {
+  border-color: #000000;
+}
+
+.panel-tabs a.is-active {
+  border-color: #000000;
+  font-weight: 400;
 }
