--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -36,7 +36,7 @@ header {
   background-color: #CCCCCC;
 }
 .box, .panel {
-  height: 94vh;
+  height: 100%;
   background-color: #f5f5f5;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
