--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -29,22 +29,17 @@ body {
 header {
   background-color: #7e7e7e;
 }
-.container{
+.container {
   margin-top: 10px;
 }
 .panel-heading {
-  background-color: #CCCCCC;
+  background-color: #cccccc;
 }
-.box, .panel {
+.box,
+.panel {
   height: 100%;
   background-color: #f5f5f5;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-}
-.hero {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
 }
 .wrapper {
   overflow-x: auto;
